--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,39 @@
+@article{Owadally202151,
+  author  = {Owadally, Iqbal and Jang, Chul and Clare, Andrew},
+  title   = {Optimal investment for a retirement plan with deferred annuities},
+  journal = {Insurance: Mathematics and Economics},
+  year    = {2021},
+  volume  = {98},
+  pages   = {51--62},
+  doi     = {10.1016/j.insmatheco.2021.02.001},
+  url     = {https://www.sciencedirect.com/science/article/pii/S0167668721000196}
+}
+
+@book{Bodie2024,
+  author    = {Bodie, Zvi and Kane, Alex and Marcus, Alan J.},
+  title     = {Investments ISE},
+  edition   = {13th},
+  year      = {2024},
+  publisher = {McGraw Hill},
+  series    = {The McGraw Hill Series in Finance, Insurance, and Real Estate},
+  isbn      = {9781266085963},
+  url       = {https://www.mheducation.co.uk/investments-ise-9781266085963-emea-group},
+  urldate   = {2026-02-24}
+}
+
+@article{Clare201606,
+title = {The trend is our friend: Risk parity, momentum and trend following in global asset allocation},
+journal = {Journal of Behavioral and Experimental Finance},
+volume = {9},
+pages = {63-80},
+year = {2016},
+issn = {2214-6350},
+doi = {10.1016/j.jbef.2016.01.002},
+url = {https://www.sciencedirect.com/science/article/pii/S2214635016000083},
+author = {Andrew Clare and James Seaton and Peter N. Smith and Stephen Thomas},
+keywords = {Behavioural biases, Trend following, Asset allocation}
+}
+
 @techreport{Friedman2014-NoteTaking,
   author      = {Friedman, Michael C.},
   title       = {Notes on Note-Taking: Review of Research and Insights for Students and Instructors},
@@ -216,10 +252,10 @@
 }
 
 @book{hollander2013nonparametric,
-  title={Nonparametric Statistical Methods},
-  author={Hollander, Myles and Wolfe, Douglas A and Chicken, Eric},
-  year={2013},
-  publisher={John Wiley \& Sons},
-  edition={3rd}
+  title     = {Nonparametric Statistical Methods},
+  author    = {Hollander, Myles and Wolfe, Douglas A and Chicken, Eric},
+  year      = {2013},
+  publisher = {John Wiley \& Sons},
+  edition   = {3rd}
 }
 
